# ai-intelligence-platform

./: .gitignore  PROGRESS.md  README.md
backend/: .env.example  pyproject.toml  railway.cron.json  railway.json
backend/app/: admin.py  briefing.py  config.py  db.py  discovery.py  embed.py  enrich.py  feed.py  main.py  personas.py  pipeline.py  retrieval.py  scoring.py  synthesis.py
backend/app/ingest/: arxiv.py  base.py  hackernews.py  rss.py
backend/migrations/: 001_init.sql  002_ingest_sources.sql  003_pipeline_runs.sql  004_expand_sources.sql  005_run_diversity.sql  006_fix_arxiv_hn.sql  007_personas.sql  008_briefings.sql  009_briefing_structure.sql  010_briefing_persona.sql
backend/scripts/: backfill_scores.py  brief.py  embed.py  ingest.py  migrate.py  pgcheck.py  pipeline.py  probe_feeds.py  query_test.py  runs.py  sources.py  stats.py  validate_scoring.py  verify_schema.py
docs/: PERSONAS.md  ROADMAP.md  STATUS.md
frontend/: .dockerignore  Dockerfile  package.json  railway.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/components/: AdminTrigger.tsx  AnswerBlock.tsx  Citations.tsx  ClusterResults.tsx  CorpusStrip.tsx  CoverageChart.tsx  DailyBriefing.tsx  GrowthChart.tsx  Icon.tsx  PersonaFeed.tsx  PersonaSwitcher.tsx  PipelineRuns.tsx  ResultGroups.tsx  SearchBar.tsx  SignalBadge.tsx  SinceYouLastLooked.tsx  SourceIcon.tsx  SourcesManager.tsx  StatCards.tsx  ThemeDonut.tsx  ThemeToggle.tsx  TodaysSignal.tsx  TopSources.tsx  TrendingRail.tsx  Wordmark.tsx
frontend/lib/: api.ts  format.ts
(+1 files in other folders)
