[project]
name = "ai-search-experience-backend"
version = "0.1.0"
description = "Backend for ai-search-experience: ingestion, indexing, hybrid retrieval, synthesis."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3.6",
    "httpx>=0.28",
    "feedparser>=6.0.11",
    "voyageai>=0.3.2",
    "groq>=0.13",
    "anthropic>=0.40",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "tenacity>=9.0",
    "selectolax>=0.3.21",
]

[tool.uv]
package = false
